--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "react-scripts": "1.0.10"
   },
   "dependencies": {
+    "css-variables-parser": "^0.1.0",
+    "cssparser": "^0.9.2",
     "d3": "^4.10.0",
+    "raw-loader": "^0.5.1",
     "react": "^15.6.1",
+    "react-css-variables": "^2.0.1",
     "react-dom": "^15.6.1"
   },
   "scripts": {
