--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "yarn build && rsync -avz build/ root@direct.meowsergirl.com:/var/www/operating-systems/build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
